--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -25,7 +25,7 @@ a:active {
 
 body {
   color: $base-font;
-  font-family: "AudiType-Normal", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 16px;
   position: relative;
   background: #ffffff;
