--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,7 +3,8 @@
 
 // Body
 // ------------------------------------------------------------
-body, html {
+body,
+html {
   height: 100%;
   overflow: hidden;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -43,9 +44,11 @@ a {
 ul {
   padding: 0;
   margin: 0;
+  
   li {
     padding: 0;
     margin: 0;
     list-style: none;
   }
+  
 }
