'Add' form now toggles; improved UI element display

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -52,3 +52,13 @@ ul {
   }
   
 }
+
+// SCREEN ELEMENT STYLES ===============================================
+
+@mixin screen-object {
+  box-shadow: 0 0 0.5em rgba(0,0,0,0.1);
+}
+
+.screen-object {
+  @include screen-object;
+}
