--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,11 +1,21 @@
 .button {
+  @include screen-object;
+  min-width: 38px;
   border: 0;
   outline: none;
   background: #5ec0c3;
   padding: 10px;
   color: #fff;
+  text-shadow: 0 0 1px rgba(0,0,0,0.25);
   
   &--grey {
     background-color: $slate;
   }
+  
+  &--symbol {
+    border-radius: 5px;
+    font-family: monospace;
+    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+  }
+  
 }
